--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
 		<div class="container d-flex flex-column d-sm-block">
 			<span class="me-2">&copy; 2022 - FlashCards</span>
 			<a class="text-secondary text-decoration-none mx-2" asp-controller="Home" asp-action="Index">Home</a>
-			<a class="text-secondary text-decoration-none mx-2" asp-controller="Sets" asp-route-page="1">Browse sets</a>
+			<a class="text-secondary text-decoration-none mx-2" asp-controller="Cards" asp-action="Sets" asp-route-page="1">Browse sets</a>
 			<a class="text-secondary text-decoration-none mx-2" asp-controller="Sets" asp-action="CreateSet">Create a
 				set</a>
 		</div>
