--- a/Views/Cards/Category.cshtml
+++ b/Views/Cards/Category.cshtml
@@ -1,5 +1,7 @@
 ﻿@model CategoryPageViewModel
-
+@{
+	ViewData["Title"] = "Browse " + Model.CardCategory.Name + " sets";
+}
 <div class="row mx-3">
 	<div class="col-12">
 		<nav aria-label="breadcrumb">
