--- a/wwwroot/css/bootstrap.custom.css
+++ b/wwwroot/css/bootstrap.custom.css
@@ -31,20 +31,20 @@
   --bs-gray-900: #212529;
   --bs-primary: #08546c;
   --bs-secondary: #88bdbc;
-  --bs-success: #198754;
+  --bs-success: #2ed458;
   --bs-info: #f1db77;
   --bs-warning: #ffc107;
   --bs-danger: #dc3545;
   --bs-light: #f8f9fa;
-  --bs-dark: #212529;
+  --bs-dark: #141414;
   --bs-primary-rgb: 8, 84, 108;
   --bs-secondary-rgb: 136, 189, 188;
-  --bs-success-rgb: 25, 135, 84;
+  --bs-success-rgb: 46, 212, 88;
   --bs-info-rgb: 241, 219, 119;
   --bs-warning-rgb: 255, 193, 7;
   --bs-danger-rgb: 220, 53, 69;
   --bs-light-rgb: 248, 249, 250;
-  --bs-dark-rgb: 33, 37, 41;
+  --bs-dark-rgb: 20, 20, 20;
   --bs-white-rgb: 255, 255, 255;
   --bs-black-rgb: 0, 0, 0;
   --bs-body-color-rgb: 33, 37, 41;
@@ -1843,13 +1843,13 @@ progress {
 
 .table-success {
   --bs-table-color: #000;
-  --bs-table-bg: #d1e7dd;
-  --bs-table-border-color: #bcd0c7;
-  --bs-table-striped-bg: #c7dbd2;
+  --bs-table-bg: #d5f6de;
+  --bs-table-border-color: #c0ddc8;
+  --bs-table-striped-bg: #caead3;
   --bs-table-striped-color: #000;
-  --bs-table-active-bg: #bcd0c7;
+  --bs-table-active-bg: #c0ddc8;
   --bs-table-active-color: #000;
-  --bs-table-hover-bg: #c1d6cc;
+  --bs-table-hover-bg: #c5e4cd;
   --bs-table-hover-color: #000;
   color: var(--bs-table-color);
   border-color: var(--bs-table-border-color);
@@ -1913,13 +1913,13 @@ progress {
 
 .table-dark {
   --bs-table-color: #fff;
-  --bs-table-bg: #212529;
-  --bs-table-border-color: #373b3e;
-  --bs-table-striped-bg: #2c3034;
+  --bs-table-bg: #141414;
+  --bs-table-border-color: #2c2c2c;
+  --bs-table-striped-bg: #202020;
   --bs-table-striped-color: #fff;
-  --bs-table-active-bg: #373b3e;
+  --bs-table-active-bg: #2c2c2c;
   --bs-table-active-color: #fff;
-  --bs-table-hover-bg: #323539;
+  --bs-table-hover-bg: #262626;
   --bs-table-hover-color: #fff;
   color: var(--bs-table-color);
   border-color: var(--bs-table-border-color);
@@ -2637,7 +2637,7 @@ textarea.form-control-lg {
   width: 100%;
   margin-top: 0.25rem;
   font-size: 0.875em;
-  color: #198754;
+  color: #2ed458;
 }
 
 .valid-tooltip {
@@ -2649,8 +2649,8 @@ textarea.form-control-lg {
   padding: 0.25rem 0.5rem;
   margin-top: 0.1rem;
   font-size: 0.875rem;
-  color: #fff;
-  background-color: rgba(25, 135, 84, 0.9);
+  color: #000;
+  background-color: rgba(46, 212, 88, 0.9);
   border-radius: 0.375rem;
 }
 
@@ -2662,16 +2662,16 @@ textarea.form-control-lg {
 }
 
 .was-validated .form-control:valid, .form-control.is-valid {
-  border-color: #198754;
+  border-color: #2ed458;
   padding-right: calc(1.5em + 0.75rem);
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%23198754' d='M2.3 6.73.6 4.53c-.4-1.04.46-1.4 1.1-.8l1.1 1.4 3.4-3.8c.6-.63 1.6-.27 1.2.7l-4 4.6c-.43.5-.8.4-1.1.1z'/%3e%3c/svg%3e");
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%232ed458' d='M2.3 6.73.6 4.53c-.4-1.04.46-1.4 1.1-.8l1.1 1.4 3.4-3.8c.6-.63 1.6-.27 1.2.7l-4 4.6c-.43.5-.8.4-1.1.1z'/%3e%3c/svg%3e");
   background-repeat: no-repeat;
   background-position: right calc(0.375em + 0.1875rem) center;
   background-size: calc(0.75em + 0.375rem) calc(0.75em + 0.375rem);
 }
 .was-validated .form-control:valid:focus, .form-control.is-valid:focus {
-  border-color: #198754;
-  box-shadow: 0 0 0 0.25rem rgba(25, 135, 84, 0.25);
+  border-color: #2ed458;
+  box-shadow: 0 0 0 0.25rem rgba(46, 212, 88, 0.25);
 }
 
 .was-validated textarea.form-control:valid, textarea.form-control.is-valid {
@@ -2680,17 +2680,17 @@ textarea.form-control-lg {
 }
 
 .was-validated .form-select:valid, .form-select.is-valid {
-  border-color: #198754;
+  border-color: #2ed458;
 }
 .was-validated .form-select:valid:not([multiple]):not([size]), .was-validated .form-select:valid:not([multiple])[size="1"], .form-select.is-valid:not([multiple]):not([size]), .form-select.is-valid:not([multiple])[size="1"] {
   padding-right: 4.125rem;
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%23343a40' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='m2 5 6 6 6-6'/%3e%3c/svg%3e"), url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%23198754' d='M2.3 6.73.6 4.53c-.4-1.04.46-1.4 1.1-.8l1.1 1.4 3.4-3.8c.6-.63 1.6-.27 1.2.7l-4 4.6c-.43.5-.8.4-1.1.1z'/%3e%3c/svg%3e");
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%23343a40' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='m2 5 6 6 6-6'/%3e%3c/svg%3e"), url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%232ed458' d='M2.3 6.73.6 4.53c-.4-1.04.46-1.4 1.1-.8l1.1 1.4 3.4-3.8c.6-.63 1.6-.27 1.2.7l-4 4.6c-.43.5-.8.4-1.1.1z'/%3e%3c/svg%3e");
   background-position: right 0.75rem center, center right 2.25rem;
   background-size: 16px 12px, calc(0.75em + 0.375rem) calc(0.75em + 0.375rem);
 }
 .was-validated .form-select:valid:focus, .form-select.is-valid:focus {
-  border-color: #198754;
-  box-shadow: 0 0 0 0.25rem rgba(25, 135, 84, 0.25);
+  border-color: #2ed458;
+  box-shadow: 0 0 0 0.25rem rgba(46, 212, 88, 0.25);
 }
 
 .was-validated .form-control-color:valid, .form-control-color.is-valid {
@@ -2698,16 +2698,16 @@ textarea.form-control-lg {
 }
 
 .was-validated .form-check-input:valid, .form-check-input.is-valid {
-  border-color: #198754;
+  border-color: #2ed458;
 }
 .was-validated .form-check-input:valid:checked, .form-check-input.is-valid:checked {
-  background-color: #198754;
+  background-color: #2ed458;
 }
 .was-validated .form-check-input:valid:focus, .form-check-input.is-valid:focus {
-  box-shadow: 0 0 0 0.25rem rgba(25, 135, 84, 0.25);
+  box-shadow: 0 0 0 0.25rem rgba(46, 212, 88, 0.25);
 }
 .was-validated .form-check-input:valid ~ .form-check-label, .form-check-input.is-valid ~ .form-check-label {
-  color: #198754;
+  color: #2ed458;
 }
 
 .form-check-inline .form-check-input ~ .valid-feedback {
@@ -2921,20 +2921,20 @@ textarea.form-control-lg {
 }
 
 .btn-success {
-  --bs-btn-color: #fff;
-  --bs-btn-bg: #198754;
-  --bs-btn-border-color: #198754;
-  --bs-btn-hover-color: #fff;
-  --bs-btn-hover-bg: #157347;
-  --bs-btn-hover-border-color: #146c43;
-  --bs-btn-focus-shadow-rgb: 60, 153, 110;
-  --bs-btn-active-color: #fff;
-  --bs-btn-active-bg: #146c43;
-  --bs-btn-active-border-color: #13653f;
+  --bs-btn-color: #000;
+  --bs-btn-bg: #2ed458;
+  --bs-btn-border-color: #2ed458;
+  --bs-btn-hover-color: #000;
+  --bs-btn-hover-bg: #4dda71;
+  --bs-btn-hover-border-color: #43d869;
+  --bs-btn-focus-shadow-rgb: 39, 180, 75;
+  --bs-btn-active-color: #000;
+  --bs-btn-active-bg: #58dd79;
+  --bs-btn-active-border-color: #43d869;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-  --bs-btn-disabled-color: #fff;
-  --bs-btn-disabled-bg: #198754;
-  --bs-btn-disabled-border-color: #198754;
+  --bs-btn-disabled-color: #000;
+  --bs-btn-disabled-bg: #2ed458;
+  --bs-btn-disabled-border-color: #2ed458;
 }
 
 .btn-info {
@@ -3007,19 +3007,19 @@ textarea.form-control-lg {
 
 .btn-dark {
   --bs-btn-color: #fff;
-  --bs-btn-bg: #212529;
-  --bs-btn-border-color: #212529;
+  --bs-btn-bg: #141414;
+  --bs-btn-border-color: #141414;
   --bs-btn-hover-color: #fff;
-  --bs-btn-hover-bg: #424649;
-  --bs-btn-hover-border-color: #373b3e;
-  --bs-btn-focus-shadow-rgb: 66, 70, 73;
+  --bs-btn-hover-bg: #373737;
+  --bs-btn-hover-border-color: #2c2c2c;
+  --bs-btn-focus-shadow-rgb: 55, 55, 55;
   --bs-btn-active-color: #fff;
-  --bs-btn-active-bg: #4d5154;
-  --bs-btn-active-border-color: #373b3e;
+  --bs-btn-active-bg: #434343;
+  --bs-btn-active-border-color: #2c2c2c;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
   --bs-btn-disabled-color: #fff;
-  --bs-btn-disabled-bg: #212529;
-  --bs-btn-disabled-border-color: #212529;
+  --bs-btn-disabled-bg: #141414;
+  --bs-btn-disabled-border-color: #141414;
 }
 
 .btn-outline-primary {
@@ -3057,19 +3057,19 @@ textarea.form-control-lg {
 }
 
 .btn-outline-success {
-  --bs-btn-color: #198754;
-  --bs-btn-border-color: #198754;
-  --bs-btn-hover-color: #fff;
-  --bs-btn-hover-bg: #198754;
-  --bs-btn-hover-border-color: #198754;
-  --bs-btn-focus-shadow-rgb: 25, 135, 84;
-  --bs-btn-active-color: #fff;
-  --bs-btn-active-bg: #198754;
-  --bs-btn-active-border-color: #198754;
+  --bs-btn-color: #2ed458;
+  --bs-btn-border-color: #2ed458;
+  --bs-btn-hover-color: #000;
+  --bs-btn-hover-bg: #2ed458;
+  --bs-btn-hover-border-color: #2ed458;
+  --bs-btn-focus-shadow-rgb: 46, 212, 88;
+  --bs-btn-active-color: #000;
+  --bs-btn-active-bg: #2ed458;
+  --bs-btn-active-border-color: #2ed458;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-  --bs-btn-disabled-color: #198754;
+  --bs-btn-disabled-color: #2ed458;
   --bs-btn-disabled-bg: transparent;
-  --bs-btn-disabled-border-color: #198754;
+  --bs-btn-disabled-border-color: #2ed458;
   --bs-gradient: none;
 }
 
@@ -3142,19 +3142,19 @@ textarea.form-control-lg {
 }
 
 .btn-outline-dark {
-  --bs-btn-color: #212529;
-  --bs-btn-border-color: #212529;
+  --bs-btn-color: #141414;
+  --bs-btn-border-color: #141414;
   --bs-btn-hover-color: #fff;
-  --bs-btn-hover-bg: #212529;
-  --bs-btn-hover-border-color: #212529;
-  --bs-btn-focus-shadow-rgb: 33, 37, 41;
+  --bs-btn-hover-bg: #141414;
+  --bs-btn-hover-border-color: #141414;
+  --bs-btn-focus-shadow-rgb: 20, 20, 20;
   --bs-btn-active-color: #fff;
-  --bs-btn-active-bg: #212529;
-  --bs-btn-active-border-color: #212529;
+  --bs-btn-active-bg: #141414;
+  --bs-btn-active-border-color: #141414;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-  --bs-btn-disabled-color: #212529;
+  --bs-btn-disabled-color: #141414;
   --bs-btn-disabled-bg: transparent;
-  --bs-btn-disabled-border-color: #212529;
+  --bs-btn-disabled-border-color: #141414;
   --bs-gradient: none;
 }
 
@@ -4716,12 +4716,12 @@ textarea.form-control-lg {
 }
 
 .alert-success {
-  --bs-alert-color: #0f5132;
-  --bs-alert-bg: #d1e7dd;
-  --bs-alert-border-color: #badbcc;
+  --bs-alert-color: #125523;
+  --bs-alert-bg: #d5f6de;
+  --bs-alert-border-color: #c0f2cd;
 }
 .alert-success .alert-link {
-  color: #0c4128;
+  color: #0e441c;
 }
 
 .alert-info {
@@ -4761,12 +4761,12 @@ textarea.form-control-lg {
 }
 
 .alert-dark {
-  --bs-alert-color: #141619;
-  --bs-alert-bg: #d3d3d4;
-  --bs-alert-border-color: #bcbebf;
+  --bs-alert-color: #0c0c0c;
+  --bs-alert-bg: #d0d0d0;
+  --bs-alert-border-color: #b9b9b9;
 }
 .alert-dark .alert-link {
-  color: #101214;
+  color: #0a0a0a;
 }
 
 @-webkit-keyframes progress-bar-stripes {
@@ -5098,17 +5098,17 @@ textarea.form-control-lg {
 }
 
 .list-group-item-success {
-  color: #0f5132;
-  background-color: #d1e7dd;
+  color: #125523;
+  background-color: #d5f6de;
 }
 .list-group-item-success.list-group-item-action:hover, .list-group-item-success.list-group-item-action:focus {
-  color: #0f5132;
-  background-color: #bcd0c7;
+  color: #125523;
+  background-color: #c0ddc8;
 }
 .list-group-item-success.list-group-item-action.active {
   color: #fff;
-  background-color: #0f5132;
-  border-color: #0f5132;
+  background-color: #125523;
+  border-color: #125523;
 }
 
 .list-group-item-info {
@@ -5168,17 +5168,17 @@ textarea.form-control-lg {
 }
 
 .list-group-item-dark {
-  color: #141619;
-  background-color: #d3d3d4;
+  color: #0c0c0c;
+  background-color: #d0d0d0;
 }
 .list-group-item-dark.list-group-item-action:hover, .list-group-item-dark.list-group-item-action:focus {
-  color: #141619;
-  background-color: #bebebf;
+  color: #0c0c0c;
+  background-color: #bbbbbb;
 }
 .list-group-item-dark.list-group-item-action.active {
   color: #fff;
-  background-color: #141619;
-  border-color: #141619;
+  background-color: #0c0c0c;
+  border-color: #0c0c0c;
 }
 
 .btn-close {
@@ -6748,8 +6748,8 @@ textarea.form-control-lg {
 }
 
 .text-bg-success {
-  color: #fff !important;
-  background-color: RGBA(25, 135, 84, var(--bs-bg-opacity, 1)) !important;
+  color: #000 !important;
+  background-color: RGBA(46, 212, 88, var(--bs-bg-opacity, 1)) !important;
 }
 
 .text-bg-info {
@@ -6774,7 +6774,7 @@ textarea.form-control-lg {
 
 .text-bg-dark {
   color: #fff !important;
-  background-color: RGBA(33, 37, 41, var(--bs-bg-opacity, 1)) !important;
+  background-color: RGBA(20, 20, 20, var(--bs-bg-opacity, 1)) !important;
 }
 
 .link-primary {
@@ -6792,10 +6792,10 @@ textarea.form-control-lg {
 }
 
 .link-success {
-  color: #198754 !important;
+  color: #2ed458 !important;
 }
 .link-success:hover, .link-success:focus {
-  color: #146c43 !important;
+  color: #58dd79 !important;
 }
 
 .link-info {
@@ -6827,10 +6827,10 @@ textarea.form-control-lg {
 }
 
 .link-dark {
-  color: #212529 !important;
+  color: #141414 !important;
 }
 .link-dark:hover, .link-dark:focus {
-  color: #1a1e21 !important;
+  color: #101010 !important;
 }
 
 .ratio {
@@ -11109,7 +11109,7 @@ input.form-control:-webkit-autofill:active {
 }
 div.dropdown-multicol > div.dropdown-col .dropdown-item.selected {
   background-color: #88bdbc;
-  color: black;
+  color: #141414;
 }
 
 div.dropdown-multicol > div.dropdown-col .dropdown-item {
@@ -11118,7 +11118,7 @@ div.dropdown-multicol > div.dropdown-col .dropdown-item {
 
 div.dropdown-multicol > div.dropdown-col .dropdown-item:hover {
   background-color: #88bdbc;
-  color: black;
+  color: #141414;
 }
 
 div.form-floating textarea.floating-textarea {
@@ -11327,12 +11327,12 @@ label.card-label-floating {
 }
 
 .card-front {
-  color: black;
+  color: #141414;
 }
 
 .card-back {
   transform: rotateX(180deg);
-  color: black;
+  color: #141414;
 }
 
 .set-study-qa {
@@ -11490,7 +11490,7 @@ a.list-user-link {
 
 #dropdownSetMoreActions a.dropdown-item:hover {
   background-color: #88bdbc;
-  color: black;
+  color: #141414;
   cursor: pointer;
 }
 
@@ -11836,7 +11836,7 @@ a.see-all-notifications:hover span {
 
 .account-dropdown ul.dropdown-menu.show li:hover a,
 .account-dropdown ul.dropdown-menu.show li:hover form button {
-  color: black;
+  color: #141414;
 }
 
 #accordionFilters {
@@ -11936,7 +11936,7 @@ a.see-all-notifications:hover span {
   flex-basis: 100%;
   flex-grow: 1;
   margin-bottom: 1rem;
-  border: 2px solid transparent;
+  border: 3px solid transparent;
 }
 
 #quiz .answer-buttons button:nth-of-type(4n) {
@@ -11948,24 +11948,43 @@ a.see-all-notifications:hover span {
   box-shadow: none;
 }
 
-#quiz .answer-buttons button:disabled {
+#quiz .answer-buttons button:disabled,
+#quiz .answer-buttons input.basic-question:disabled {
   opacity: 0.9;
 }
 
 #quiz .answer-buttons button.selected {
-  border: 4px solid #f1db77;
+  border: 3px solid #f1db77;
   background-color: #0a6684;
   color: #f8f9fa;
 }
 
-#quiz .answer-buttons button.correct {
+#quiz .answer-buttons button.correct,
+#quiz .answer-buttons input.basic-question.correct {
   background-color: lightgreen;
-  color: black;
+  color: #141414;
 }
 
-#quiz .answer-buttons button.selected.wrong {
+#quiz .answer-buttons button.selected.wrong,
+#quiz .answer-buttons input.basic-question.wrong {
   background-color: lightcoral;
-  color: #f8f9fa;
+  color: #141414;
+}
+
+#quiz .answer-buttons input.basic-question {
+  border: 3px solid #022534;
+}
+
+#quiz .answer-buttons input.basic-question:focus {
+  border: 3px solid #f1db77;
+}
+
+#quiz .answer-buttons input.basic-question.correct {
+  border: 3px solid lightgreen;
+}
+
+#quiz .answer-buttons input.basic-question.wrong {
+  border: 3px solid lightcoral;
 }
 
 .button-quiz-control {
